<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorSecondaryVariant">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/singup"
            android:navigationIcon="@drawable/back_arrow"
            app:titleTextColor="?colorPrimaryVariant"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginBottom="20dp"
            android:textSize="20sp">
            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:layout_marginBottom="20dp"
            android:textSize="20sp">
            <EditText
                android:id="@+id/inputSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:layout_marginBottom="20dp"
            android:textSize="20sp">
            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:layout_marginBottom="20dp"
            android:textSize="20sp">
            <EditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/pass"
            android:textSize="20sp"
            app:helperText=""
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPass"
            android:textSize="20sp"
            app:helperText=""
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/aceptTerms"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:gravity="center"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/inputCheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="?colorPrimary"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center">
        <Button
            android:id="@+id/btnSendSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:textAllCaps="false"
            android:text="@string/singup"
            android:textSize="20sp"
            android:paddingVertical="12dp"/>
    </LinearLayout>

</LinearLayout>